<resources>
    <string name="app_name">Memoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_logout">Logout</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="home_second">Home Second</string>

    <string name="loginText">Login</string>
    <string name="usernameHint">E-mail</string>
    <string name="passwordHint">Password</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn_text">New User?</string>

    <string name="register">Register</string>
    <string name="reEnterPasswordHint">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="username">Username</string>
    <string name="save_profile">Save Profile</string>

    <string name="new_memory_title">New Memory</string>
    <string name="radiobutton1">Image Memory</string>
    <string name="radiobutton2">Video Memory</string>
    <string name="radiobutton3">Audio Memory</string>
    <string name="radiobutton4">Location Memory</string>
    <string name="continue_btn_text">Continue</string>
    <string name="add_description">Add Description....</string>
    <string name="post_memory">Post Memory</string>

    <string name="upload_date">Upload Date</string>
    <string name="default_text">lorem ipsum dolor sit amet soluta regione urbanitas vis qui elit populo ut.</string>
    <string name="default_likes">0 Likes</string>

    <string name="ad_app_id">ca-app-pub-xxxxxxxxxxxxxxxx~xxxxxxxxxx</string>
    <string name="banner_ad_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_id_test">"ca-app-pub-3940256099942544/1033173712"</string>

    <string name="default_comments">0 Comments</string>
    <string name="comment_hint">Comment...</string>
    <string name="submit_comment">Send Comment</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_mode">Change Mode</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="gallery_title">My Memories</string>
    <string name="desc_image_comment">Image of the retrieved memory</string>
    <string name="desc_image_upload">Image that is going to be uploaded</string>
    <string name="desc_imageView_memory">ImageView to show the retrieved image</string>
    <string name="like_button">like button</string>
    <string name="likes_number">"%d Likes"</string>
    <string name="comments_count">"%d Comments"</string>
    <string name="profile_image">profile Image</string>
</resources>
